# azure-communications-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: email.rs  sms.rs
src/: communication.rs  lib.rs  types.rs  utils.rs
src/communication/: email.rs  sms.rs
