[package]
name = "azure-communications-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
lazy_static = "1.5.0"
regex = "1.10.6"
reqwest = "0.12.7"
ring = "0.17.8"
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
time = {version = "0.3.36", features = ["formatting"]}
tz-rs = "0.6.14"
tzdb = "0.6.1"
