[package]
name = "azure-communications"
version = "0.1.0"
edition = "2021"
description = "API Wrapper for the Azure Communication Services in Rust."
repository = "https://github.com/AlexanderProd/azure-communications-rust"
homepage = "https://github.com/AlexanderProd/azure-communications-rust"
license = "MIT"
readme = "README.md"
authors = ["Alexander Hörl <mail@alexanderhoerl.de>"]
keywords = ["azure", "communications", "sms", "chat", "calling"]
categories = ["api-bindings", "email"]

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
lazy_static = "1.5.0"
regex = "1.10.6"
reqwest = "0.12.7"
ring = "0.17.8"
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
time = {version = "0.3.36", features = ["formatting"]}
tz-rs = "0.6.14"
tzdb = "0.6.1"

[dev-dependencies]
tokio = { version = "1.39.3", features = ["full"] }
